fixed some z-index issues, regarding search bar

--- a/source/frontend/web/css/components/edit-popup.css
+++ b/source/frontend/web/css/components/edit-popup.css
@@ -14,6 +14,7 @@
     font-family:Arial, Helvetica, sans-serif;
     margin: 1%;
     top: 25%;
+    z-index: 10;
 }
 
 .edit-container>span{
