--- a/source/frontend/web/css/global.css
+++ b/source/frontend/web/css/global.css
@@ -66,6 +66,7 @@ nav .user-options{
     transform: translateX(0);
     opacity: .98;
     filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.2));    
+    z-index: 10;
 }
 
 .nav-active p{
@@ -104,6 +105,7 @@ nav .user-options{
     opacity: 1;
     background-color: rgba(53, 53, 53, 0.75);
     transition: opacity 1s ease, background-color 5s ease-in;
+    z-index: 5;
 }
 
 .btn {
@@ -154,7 +156,7 @@ nav .user-options{
     justify-content: center;
     background: rgba(128, 128, 128, 0.5);
     backdrop-filter: blur(2px);
-    z-index: 3;
+    z-index: 10;
 }
 
 .popup-content {
